name:                h99
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/h99#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable h99
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Lists1, Lists2, Lists3
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
